--- a/_i18n/en/_posts/2020-10-01-千年暗室-一燈即明.md
+++ b/_i18n/en/_posts/2020-10-01-千年暗室-一燈即明.md
@@ -1,57 +1,52 @@
 ---
   layout: "post"
-  title: "Thousand-year dark room, one light is bright"
-  excerpt: "Whether the darkness can be broken depends on whether more people are willing to be lighters and lighters."
+  title: "A thousand-year-old dark room can be illuminated by a single lantern"
+  excerpt: "Whether the darkness can be broken depends on whether more people are willing to light and pass on lanterns."
   image: "/assets/imgs/d4e84f0fb3a9c635f888319731e06a4b8267ef52.jpg"
-  author: "唐鳳"
+  author: "Audrey Tang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+Infectious diseases originate from the large-scale group living of human beings; ironically, a pandemic not only endangers public health but also destroys the foundation of society – trust.
 
-Infectious diseases are conceived in the large-scale social life of human beings. Ironically, the plague not only harms public health, but also destroys the foundation of society—trust. 
+Since ancient times, the way to fight infectious diseases has been to increase interpersonal distances: closing country borders, locking down cities, stopping gatherings and so on. An increase in distrust seems inevitable – and some groups are even eager to blame the diseases on “others”. whether they are of a different race, nationality, or belief. That tendency has prevailed from the Black Death of medieval Europe to the COVID-19 of today.
 
-The ancient way to fight infectious diseases is to increase interpersonal distance: lock the country, close the city, stop gatherings... It seems inevitable that society’s mutual distrust is increasing day by day, and it is even eager to blame the infectious disease. "Alien", whether it is a group of different races, nationalities or beliefs, from the Black Death in Medieval Europe to today's epidemic. 
+During the fight against the pandemic in 2020, however, Taiwan has used its open government model to successfully prevent the landslide effect of distrust. At the onset of the pandemic, masks and other personal protective equipment quickly fell into a supply and demand imbalance. The government, to restore balance, adopted a real-name system in a timely fashion to guarantee fair distribution.
 
-In the anti-epidemic process in 2020, Taiwan has successfully prevented the slippery effect of distrust with its "open government." 
+But selling masks was not enough: preventative measures against the disease would be effective only if the majority of people were willing to properly wear masks to cover their faces. Who would execute this plan? Taiwan’s over 6,000 pharmacists, each having not only knowledge but also engagement in their communities and neighborhoods, seemed the best candidates for messengers the public would find trustworthy and approachable.
 
-With the epidemic, masks and other personal protective equipment quickly fell into a supply-demand imbalance. The government promptly adopted a real-name system to ensure fair distribution. 
+Yet not everything could be achieved simply by the public trusting pharmacists – for pharmacists, executing the mask initiative would be an extra chore that could affect the usual drug-dispensing business. But the Central Epidemic Command Center (CECC) did not issue orders forcing pharmacists to comply – instead, it designed the mask-rationing system based on the experience of retrieving medications with refillable prescriptions for chronic diseases, flattening the learning curve for everyone.
 
-However, not only do masks have to be sold, but most people are willing to wear them correctly to prevent the epidemic. Who will execute it? More than 6,000 pharmacists, both with professional image and knowledge, but also in the community and neighborhood, seem to be the only people who are trusted and easily approached. 
+It also allowed pharmacists to come up with various innovations such as limited-hour sales and take-a-number systems to reduce wait times for the public. With such incentives, pharmacists integrated further into civic technology communities, improved automated processes, and helped people save time. The government reciprocated with complete trust in the cooperation, and continuously improved the data structures of the National Health Insurance Administration with weekly iterations, forming a virtuous cycle.
 
-Not just relying on the people to trust the pharmacist can accomplish everything. For pharmacists, this additional chore is likely to affect the normal drug dispensing business. However, the command center did not issue an order to force pharmacists to follow suit. Instead, it simulated the experience of receiving medications with continuous prescriptions for chronic diseases to design a real-name mask system to reduce the cognitive cost of everyone. 
+In other words, when the government was willing to understand the needs of pharmacists and provide space for mutual participation, the two complemented each other to win back more social trust. Only then did the pandemic-fighting national team lineup grow stronger.
 
-On the other hand, in order to save work and waiting time, various processes developed by pharmacists, such as receiving number plates or limited-time sales, have gradually gained social recognition. Pharmacists are motivated by this kind of encouragement to further integrate the citizen science and technology community to improve automated processes and save people’s time; and the government has given full trust in the results of such collaboration, which will improve the data structure of the National Health Insurance Agency and iterate and form weekly A virtuous circle. 
+##### New approaches
 
-In other words, the government and pharmacists may have consumed each other. When the government is willing to understand the needs of pharmacists and give space to participate together, can they win back more social trust together, and the lineup of the national epidemic prevention team will also increase. Grow stronger. 
+There have also been a case where a worker in an intimate bar were diagnosed with COVID-19; in spaces like that, both guests and employees are particularly sensitive to privacy. However, in terms of pandemic prevention, failing to provide reliable information for tracking would lead to significant vulnerabilities.
 
-##### "New" Xinxiangying
+But the government did not invoke sanctions or order nightclubs to close down if they refused to cooperate with pandemic controls: such measures could reinforce the stigma society attaches to workers in nightclubs and intimate bars, or could cause businesses to go underground (as in the Prohibition era). Both situations would only make the spread of the pandemic even more unpredictable.
 
-In addition, there have also been cases where hotel workers have been diagnosed. It can be imagined that such special places are particularly sensitive to privacy regardless of guests or workers. Under the needs of epidemic prevention, if reliable information is not provided for tracking, a big loophole will be formed. 
+Fortunately, experts at the CECC with extensive prior experience with HIV positive communities devised a practical "real-contact system" — as long as people could be effectively contacted, no real names were necessary. The CECC also clearly explained the scientific crux — social distancing must be maintained and droplet infections must be avoided. As long as businesses could achieve this, they could remain open.
 
-The government did not use penalties, or strictly ordered hotels and other places to close shops or people if they did not cooperate with the epidemic. If this is done, the society's stigma of related workers may increase, or it may be like a prohibition. The same caused the operators to go underground, and the unpredictability of the spread of the epidemic has increased significantly. 
+As a result, businesses developed creative approaches such as leaving code names, single-use emails and prepaid mobile phone numbers, or providing hats with plastic shields to maintain social distancing. When even nightclubs could join the fight, the prevention effort garnered even more social trustworthiness.
 
-Fortunately, the experts in the command center have had a lot of experience in HIV work in the past and have come up with a set of "real connection system": as long as they can effectively contact people, real names are not required. The command center also explained the crux of science clearly: social distancing must be maintained and droplet infection must be avoided. As long as the industry can do this, local governments can open up. 
+The pandemic has also brought severe challenges to national governance. Countries have adopted isolation measures such as national or city-wide lockdowns, school suspensions, and business closures — turning many countries and cities into lonely islands à la *Lord of the Flies* . Being isolated from the world brings pressure: although leaders may have been elected through democratic processes, democracy is still rooted in competition between parties, giving rise to escalating opposition and conflict: every person sees a "beast" projected from their mind. Unquestionably, the easiest casualties are science and reason – thus, as *Lord of the Flies* describes: "They walked along, two continents of experience and feeling, unable to communicate." As the pandemic spreads, these dramas continue to play out.
 
-So the industry came up with many innovative methods, such as leaving a code number and one-time email, easy to pay card mobile phone, wearing a hat with a face mask to maintain social distance and so on. If even hotels and dance halls can join the "anti-epidemic national team," social trust should not be easily devalued due to epidemic prevention. 
+Despite not imposing citywide lockdown measures, Taiwan still cannot be considered a utopia. This truth is especially apparent in Taiwan's international activity: being inappropriately overlooked and blockaded has created domestic pressure. Even without a pandemic, there has always been a lot of fighting among parties. Epidemic prevention only makes it more likely the fighting will worsen.
 
-It seems that the interpersonal estrangement caused by the plague and the lack of trust caused by the interpersonal estrangement lies in the Bimaron effect: the more the ruler believes in the people, the more trustworthy the people are. 
+But right before the fiercely contested election this January, one [survey](https://www.readr.tw/post/2102) showed that, regardless of their political leanings, the public had a high degree of recognition for the deepening of democracy and international connection. It was like a kindle of fire radiating warmth in a world filled with wind and snow.
 
-The epidemic also poses severe challenges to government governance. In particular, countries have adopted isolation measures such as lockdown, lockdown, suspension of school, and closure of business, making many countries and cities look like islands in the "Lord of the Flies" . The pressure brought about by isolation, even if leaders are created through democratic procedures, representative democracy is rooted in partisan competition, which makes opposition and conflicts continue to rise. "Monsters" in everyone's hearts appear from time to time and are most easily sacrificed. It is undoubtedly science and reason, just like the "Piggy" in the story. So as the book says: "They go their own way, cognition and likes and dislikes are like different things, never overlapping"-as the epidemic spreads, it continues to be staged. 
+##### A single lantern
 
-Although Taiwan has not adopted isolation measures such as lockdown, it is not a utopia either. In particular, Taiwan’s space for international activities has been improperly ignored and blocked for a long time, creating internal pressure. Before the outbreak of the epidemic, there have never been a lot of mutual attacks and fights between parties, and they are more likely to intensify due to the development of the epidemic. 
+Legislator Kao Hung-an once served as vice president of data analysis at Foxconn. She recently cited the data from the [geoBingAn mask map](https://geobingan.info/event/mask), pointing out that the difference between supply and demand in different regions caused unfair distribution and requesting an adjustment from equal rations. Chen Shih-chung, Minister of Health and Welfare, did not angrily defend the existing policy. Instead he said, "Legislator, please teach us," and revised it.
 
-But just before the fiercely contested January general election, there was [a survey](https://www.readr.tw/post/2102), which showed that no matter which camp the people are, the Both "deepening" and "international connection" are highly recognized. It seems that amidst the blizzard, there is still a kind of fire that radiates warmth. 
+This reminds me of a Buddhist saying: "A thousand-year-old dark room can be illuminated by a single lantern." Whether the darkness can be broken depends on whether more people are willing to light and pass on lanterns.
 
-##### Light a lamp
+I do not naively believe that the world will become a better place as long as everyone has good intentions. Digital innovation is also very important; on the internet, we don’t have to maintain social distancing. More importantly, digital spaces allow all footprints to remain: everyone can have a voice and a part to play.
 
-Legislative member Gao Hongan, who served as deputy general manager of data analysis at Hon Hai. When she quoted the data of "[geoBingAn Mask Map](https://geobingan.info/event/mask)", she asked Minister Chen Shizhong, the Minister of Health and Fu, to point out the uneven distribution caused by the difference in supply and demand in various regions, and when she asked to adjust the equal rationing Minister Chen, who is highly popular, did not angrily defend the existing policies. Instead, he said: "Commissioner, ask us for advice," and immediately proceeded to revise it. The senior committee member immediately praised on Facebook: "Inquiry yesterday, improve today." The goodwill of the two sides based on the common values of democracy seems to have brought a glimmer of light. 
+The mask map happens to be a suitable example of this. The National Health Insurance Administration posted real-time information on mask availability at pharmacies on the national open data platform; in less than a week, over a hundred apps were developed by various groups to channel this information through different maps, chat robots, or voice assistants. It is equivalent to establishing a distributed ledger. And as time passes and people continue to contribute in this way, trust will continue to accumulate.
 
-The Buddhist school says: "A dark room for a thousand years will be illuminated by a single light." Whether the darkness can be broken depends on whether there are more people willing to be lighters and lighters. 
-
-I am not naive to think that as long as everyone has good intentions, the world will become better, and digital innovation is also crucial-the Internet does not have to maintain social distancing, and more importantly, digital lets you walk through Footprints can be left, so fragments of trust can always be connected, and some kind thoughts are often inspired. 
-
-Mask map is just a suitable example. The National Health Insurance Agency puts the pharmacy's timely mask stock on the government information open platform. In less than a week, all walks of life have developed hundreds of applications, which can be accessed through various maps, chat robots or voice assistants. To inquire, it is tantamount to establishing a decentralized ledger, allowing trust to continue to accumulate over time. 
-
-"Love your neighbor as yourself", perhaps because neighbors are no strangers, even when the plague spreads, it is not that difficult. In a digital world that transmits nearly 300,000 kilometers per second, it is indeed "close to each other." The epidemic has temporarily alienated people from relatives and friends, but digital has brought us very close to strangers. If everyone helps, the government can start by trusting the people. 
+In a digital world, distance doesn't separate friends. The pandemic may have temporarily isolated us from loved ones, but in many ways the digital space has brought us even closer. If they want to support and boost this movement of trust, governments can start with one simple principle: trusting their people.
