Fix typo & adjust format

--- a/_i18n/en/_posts/2020-10-06-你被「創新」了嗎？一趟雙向共學的實踐之旅.md
+++ b/_i18n/en/_posts/2020-10-06-你被「創新」了嗎？一趟雙向共學的實踐之旅.md
@@ -13,7 +13,7 @@
 ---
 
 
-### From &quot;I can’t live without you&quot; to an official official of the &quot;cooperation meeting&quot;
+### A civil servant who associates from &quot;I can't live without you&quot; to a &quot;collaborative meeting&quot;
 
 In September this year, we went to the [Indigenous Peoples Association (Indigenous Peoples Committee) to organize the &quot;Open Government Cooperation Meeting&quot; Course](https://issuu.com/pdis.tw/docs/20200923________________), in the communication link after the speech, the first person to speak is not the student, but the po (open government contact person) who jointly prepared the course ). He stood up and said something:
 
@@ -61,4 +61,4 @@ Accumulation of experience in several courses, we also understand better that th
 
 We are also a part of the public service system, and we are &quot;commonly&quot; in &quot;innovating&quot; this culture. 
 
-##### Note: &quot;I Can&#39;t Live Without You&quot; is a film written and directed by Taiwanese director Dai Liren. It is based on a 2003 social news about a Taiwanese single father holding his daughter to jump on a sky bridge. 
+*Note: &quot;I Can&#39;t Live Without You&quot; is a film written and directed by Taiwanese director Dai Liren. It is based on a 2003 social news about a Taiwanese single father holding his daughter to jump on a sky bridge. 
