--- a/_i18n/zh-TW/_posts/2020-10-06-你被「創新」了嗎？一趟雙向共學的實踐之旅.md
+++ b/_i18n/zh-TW/_posts/2020-10-06-你被「創新」了嗎？一趟雙向共學的實踐之旅.md
@@ -12,7 +12,7 @@ tags:
 - 公務員培訓
 ---
 
-### 從《不能沒有你》聯想到「協作會議」的一名公務
+### 從《不能沒有你》聯想到「協作會議」的一名公務員
 
 今年九月，我們到[原民會（原住民族委員會）辦理「開放政府協作會議」課程](https://issuu.com/pdis.tw/docs/20200923________________)，演講後的交流環節，第一個發言的不是學員，而是共同籌備這次課程的原民會PO（開放政府聯絡人）。他站起來說了一段話：
 
@@ -60,4 +60,4 @@ tags:
 
 我們同樣是公務體系的一環，是「共同」在「創新」著這套文化。
 
-##### 註：《不能沒有你》為台灣導演戴立忍編劇、導演的一部電影，取材於2003年一則台灣單親父親抱女兒欲跳天橋的社會新聞。
+*註：《不能沒有你》為台灣導演戴立忍編劇、導演的一部電影，取材於2003年一則台灣單親父親抱女兒欲跳天橋的社會新聞。
