--- a/_i18n/en/_posts/2020-10-13-青年參與-攜手共創.md
+++ b/_i18n/en/_posts/2020-10-13-青年參與-攜手共創.md
@@ -1,27 +1,26 @@
 ---
   layout: "post"
-  title: "Youth participation, work together to create"
-  excerpt: "Entering the government to actually participate in policies has gradually become a daily routine for young friends."
+  title: "Youth participation — Co-work and co-create"
+  excerpt: "Engaging the government on actual policy has gradually become a daily routine for young people."
   image: "/assets/imgs/ffd5148f783cf67fd6ca0109125ee1cb61970cb0.jpeg"
-  author: "唐鳳、簡德源、魏守斌、王少芸、彭筱婷"
+  author: "Audrey Tang, D.Y. Chien, Shou-Bin Wei, Selina Wang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "青年參與"
+    - "Youth Engagement"
 ---
 
+Taiwan is surrounded by mountains and mountaineering is popular. In the past, mountain lovers had to repeatedly enter almost the same information in four separate systems, including the application for Taiwan National Park Permits by Construction and Planning Agency, the application for entry permit by National Police Agency, and the application for villa and nature reserves by the Forestry Bureau, which is very painstaking for them.
 
-Taiwan is surrounded by mountains and mountaineering activities are popular. In the past, before departure, mountain friends had to apply for admission to the National Park of the Construction and Construction Department, the application for admission to the mountain by the Police Department, and the application for mountain houses and nature reserves of the Forest Service Bureau. , Inputting almost the same information repeatedly has made the mountain friends a headache for many years. 
+This problem has an opportunity to be changed with the contribution of our young friends. In 2019, under my office's "Rescue Action by Youth, RAY" project, a group of interns designed a prototype mountain website that reversed the long been criticized user experience. The "Taiwan Mountaineering Application One-stop Service" website subsequently launched by the Executive Yuan is the result of collaboration with various agencies guided by the excellent design of this group of young friends.
 
-With the contributions of young friends, this issue has an opportunity for change. In 2019, in the "Rescue Action by Youth, RAY" (Rescue Action by Youth, RAY) organized by my office, a group of trainees designed a prototype of a mountaineering website, which reversed the users who have been criticized for a long time. Experience. The "Taiwan Mountaineering Application One-stop Service Network" subsequently launched by the Executive Yuan is the result of collaboration with various agencies under the guidance of the excellent design of this group of young friends. 
+This collaboration has made me realize that young people are often the easiest to empathize with existing problems in society and can provide the solutions; however, for those who want to contribute, it is often difficult for them to put ideas into practice due to lack of resources. And the government can make these good ideas more likely to be realized by providing communication channels and linking up community support.
 
-This collaborative experience has made me realize that young friends are often the easiest to empathize with existing problems in society and can provide exact solutions; however, friends who are committed to contribute are often limited by insufficient resources and difficult to use. At this time, if the government can propose channels of communication and connect with the community to support, it can make these good ideas more likely to be realized. 
+For example, in 2017, a proposal to ban plastic straws appeared on the National Development Council's Public Policy Participation Network Platform (Join.gov.tw), and it quickly exceeded the signature threshold for petition. Later, people discovered that Wang Hsuan Ju, who proposed the petition, was a 16-year-old high school student. She not only succeeded in gathering strength through the Internet and gradually realizing the initiative to restrict the use of plastic straws, but also became a member of the first committee of the Executive Yuan's "Open Government National Action Plan Task Force" this year.
 
-For example, on the Public Policy Network Participation Platform of the National Development Council (Join.gov.tw), there was a proposal to ban plastic straws in 2017, which soon broke the threshold for joint signing. Later, everyone discovered that the joint signing proposal Wang Xuanru, a 16-year-old high school student. She not only succeeded in gathering strength through the Internet and gradually realizing the initiative to restrict plastic straws, she also became the first member of the Executive Yuan's "Open Government National Action Plan Promotion Group" this year. 
+In the meantime, thousands of young friends proposed to lower the legal age of majority in the Civil Code, which also received the support of the Executive Yuan. On August 13, 2020, the court passed the amendment to 38 laws, including the Civil Code, to lower the legal age of majority to 18 from 20 (the right to vote in elections is discussed through the constitutional amendment process) - these are all manifestations of the youth's independent voice.
 
-At the same time, thousands of young friends proposed to amend the civil law age of adulthood, which also won the support of the Executive Yuan. On August 13, 2020, the Court passed 38 amendments to the Civil Law, which will lead to adulthood. The age is changed from 20 to 18 (the right to vote in elections is discussed in accordance with the constitutional procedures)-these are the manifestations of youth's voluntary voice. 
+Nowadays, engaging the government on actual policy has gradually become a daily routine for young people. In 2016, the Executive Yuan established the Youth Advisory Group under the concept of "reverse mentor", which not only allows young people to collaborate with various ministries of the Executive Yuan, but also to give advice and point out the future direction of the government.
 
-To this day, entering the government to actually participate in policies has gradually become a daily routine for young friends. In 2016, the Executive Yuan established the Youth Advisory Committee. Starting from the concept of "reverse mentor (trainee consultant)", it not only allows young friends to enter the hospital to collaborate with various ministries, but also to give advice and point out the future direction for the government. 
+The Youth Advisory Group members come from different sectors of the society and often have first-hand practical experience, which has an immediate effect in linking up various departments of the industry, government, academia and research institutes to solve social problems and participate in local development. For example, member of the first session, Valagas Gadeljeman, advocated the promotion of gender-friendly toilets in tertiary institutions, which won the support of the Ministry of Education and was included in the grant index after the national survey. When Huang Wei Hsiang was a member of the second session of Youth Advisory Committee Group, he proposed to allow WorldSkills Competitions (WSC) athletes to participate in the National Day Parade, which was immediately supported by the Executive Yuan. It enables our internationally renowned athletes to be recognized by our people.
 
-The youth advisory committee members come from various fields of society and often have first-hand practical experience. They often have immediate results in linking the various departments of the industry, government, academia, and research institutes to solve social problems and participate in local development. For example, the first Valagas Gadeljeman (Hu Zhehao) committee advocated that colleges and universities should promote gender-friendly toilets, which was supported by the Ministry of Education and included in the subsidy index after the national census; when committee member Huang Weixiang served as the second youth advisory committee , The proposal allows WorldSkills Competitions (WorldSkills Competitions, WSC) national players to participate in the National Day parade. This proposal immediately received the support of the Executive Yuan, so that internationally renowned technical players can be recognized by the people. 
-
-"There is a gap in everything, and the gap is the entrance of light." For me, the creativity and vitality of young friends is the light to solve social problems. I look forward to more young friends joining the ranks of collaboration in the future, so that the power of the government can promote your vector and weave a sustainable future together. 
+“There is a crack in everything, that's how the light gets in”. To me, the creativity and vitality of young people is the light to solve social problems. I look forward to more young people joining in the collaboration in the future, so that the government's strength can help realize your thinking and together we can weave a sustainable future.
