--- a/_i18n/zh-TW/_posts/2020-10-13-青年參與-攜手共創.md
+++ b/_i18n/zh-TW/_posts/2020-10-13-青年參與-攜手共創.md
@@ -3,7 +3,7 @@ layout: post
 title: 青年參與，攜手共創
 excerpt: 進入政府內實際參與政策，也逐漸成為青年朋友的日常。
 image: /assets/imgs/ffd5148f783cf67fd6ca0109125ee1cb61970cb0.jpeg
-author: 唐鳳、簡德源、魏守斌、王少芸、彭筱婷
+author: 唐鳳、貢丸、魏守斌、王少芸、彭筱婷
 category: blog
 tags:
 - 青年參與
