--- a/_i18n/en/_posts/2020-10-21-善用連結的社會創新.md
+++ b/_i18n/en/_posts/2020-10-21-善用連結的社會創新.md
@@ -1,29 +1,28 @@
 ---
   layout: "post"
-  title: "Shang Zhou Column: Social Innovation to Make Good Use of Connection"
-  excerpt: "We have received a total of 95 social innovation cases from 16 countries."
+  title: "Good Connections on Social Innovation"
+  excerpt: "We received a total of 95 social innovation projects from 16 countries."
   image: "/assets/imgs/a03fb51e146aceae8cf14ad492cd1f38e06d3e29.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🌏 The second annual Asia Pacific Social Innovation Partnership Award has just ended. Affected by the pandemic, the award process from application submission, judge review to winners' sharing has completely moved online, but the participants' enthusiasm has not diminished. We received a total of 95 social innovation projects from 16 countries including Taiwan, Hong Kong, Japan, Singapore, Vietnam, the Philippines, and India.
 
-The 2nd Asia-Pacific Social Innovation Cooperation Award has just ended. Affected by the epidemic, the award process from receipt, review to winner sharing has been completely changed to an online mode, but everyone’s enthusiasm for participation has not diminished. Including a total of 95 social innovation projects from 16 countries including Taiwan, Hong Kong, Japan, Singapore, Vietnam, the Philippines and India. 
+☀️ Some organizations solve energy inequality through technological collaboration. For example, consider the "Bottom Up Approach to Solar Lighting in Villages That Have Lost Income" project in the Philippines initiated by the Liter of Light Global Foundation. This project leverages the concept of "family as a factory" to organize women in the cooperative to make solar lights from recycled PET bottles. In addition to making lamps for their own families, the trained women also become trainers to train local youth and solve the lighting needs of impoverished areas.
 
-Some organizations solve energy inequality through technological collaboration. For example, in the Philippines, "Bottom Up Approach to Solar Lighting in Villages That Have Lost Income" (Bottom Up Approach to Solar Lighting in Villages That Have Lost Income) is provided for low-income villages. This initiative, initiated by the one-liter Liter of Light Global Foundation, uses the concept of "family as a factory" to organize women in the cooperative to use recycled PET bottles to make solar lights. In addition to making lamps for their families, the trained women also become trainers to train local youth and solve the lighting needs of poor areas. 
+🕯️ It may be difficult for many people to conceptualize that 25% of the world population have no access to stable electricity. Poor households in some areas even spend a third of their monthly income to buy kerosene for lighting.
 
-It is difficult for ordinary people to imagine that 25% of people in the world cannot enjoy stable electricity. Poor households in some areas even spend a third of their monthly income to buy kerosene for lighting. 
+💡 This Liter of Light Global Foundation project combines recycling and sustainable energy, so that those in need can not only "illuminate themselves", but also "light up lights for others." Currently, its bases have spanned 32 provinces in the Philippines, showing its effectiveness.
 
-The one-liter Light Foundation project combines recycling and sustainable energy, so that those in need can not only "illuminate themselves", but also "light up lights for others." The current base has spanned 32 counties in the Philippines, which is quite effective. 
+🏦 Some organizations use the digital financial system to alleviate the concerns of people who are working far from their hometowns.
 
-Some organizations use digital financial systems to ease the worries of people who have left their hometowns. 
+📲  Singapore's BeamAndGo team has developed an innovative payment platform built on payment and e-commerce platforms. It allows overseas workers in the Philippines to directly pay household bills remotely, or convert their salaries into gift cards for directly specified expenditures in local pharmacies or supermarkets. In this way, overseas workers can ensure that their money is used properly.
 
-Singapore's BeamAndGo team has developed a payment platform established by an innovative payment and e-commerce platform, allowing overseas workers in the Philippines to directly pay household bills remotely, or convert their salaries into gift cards, and directly bind them to local pharmacies Or supermarket consumption. In this way, overseas workers can ensure that money is used properly. 
+🔢 Currently, the BeamAndGo team is collaborating with the Philippine government and more than 7,100 stores, as well as connecting with multiple banks and remittance centers. In addition, they also provide micro-loans for migrant workers to alleviate their risk of having to pay high interest to borrow money in the past. This project overturns the traditional financial model of migrant workers' remittances to their hometowns, and is a model of technological solutions to social problems.
 
-Currently, the BeamAndGo team is cooperating with the Philippine government and more than 7,100 stores, as well as connecting many banks and remittance centers. In addition, they also provide micro-loans for migrant workers to improve the risk of having to pay high interest to borrow money in the past. This case reverses the traditional financial model of migrant workers' remittances to their hometowns, and is a model of technology to solve social problems. 
+🔄 Given the severe pandemic this year, the Asia Pacific Social Innovation Partnership Award review committee awarded a special award to the Community Resilience Fund in Hong Kong. This emergency fund, established by the Social Ventures Hong Kong and the Sustainable Finance Initiative, provides zero-interest emergency loans for social enterprises. Furthermore, when a social enterprise repays the loan, the money will be returned to the fund and continue to assist other social enterprises.
 
-This year's epidemic is severe. This time, the Asia-Pacific Social Innovation Cooperation Award jury awarded a special award to the Hong Kong Social Resilience Fund (Community Resilience Fund). This emergency fund, established by the Hong Kong Social Venture Capital Fund and the Perpetual Finance Initiative, not only provides zero-interest emergency loans for social enterprises, but when the social enterprises repay, the money will be returned to the fund and continue to assist others Social enterprise. 
-
-These cases show me that social innovation does not necessarily require new inventions or special tools. As long as you grasp social values, make good use of existing foundations and technologies, and invite partners from all parties to collaborate, you will have the opportunity to solve society Questions, help more people. These things make society good, and we look forward to more people joining us. 
+🏆 These projects have shown me that social innovation does not necessarily require new inventions or special tools. As long as we recognize social values, make good use of existing foundations and technologies, and invite partners everywhere to collaborate, we will have opportunities to solve social problems and help more people. We look forward to more people joining us in these activities for social good.
