--- a/_posts/2020-10-21-善用連結的社會創新.md
+++ b/_posts/2020-10-21-善用連結的社會創新.md
@@ -8,20 +8,20 @@ category: blog
 tags: [社會創新]
 ---
 
-第二屆亞太社會創新合作獎剛剛結束，受到疫情影響，從收件、評審到得獎者分享等獎項流程全面改為線上模式，但大家參與熱情絲毫不減，我們總共收到了包括來自臺灣、香港、日本、新加坡、越南、菲律賓與印度等 16 國、共計 95 件的社會創新案。
+🌏 第二屆亞太社會創新合作獎剛剛結束，受到疫情影響，從收件、評審到得獎者分享等獎項流程全面改為線上模式，但大家參與熱情絲毫不減，我們總共收到了包括來自臺灣、香港、日本、新加坡、越南、菲律賓與印度等 16 國、共計 95 件的社會創新案。
 
-有的組織透過科技協作，解決能源不均。例如菲律賓的「以草根模式為低收入村莊提供可負擔的太陽能計畫」（Bottom Up Approach to Solar Lighting in Villages That Have Lost Income）。這個由一公升的光全球基金會（Liter of Light Global Foundation）發起的行動，透過「家庭即工廠」的概念，組織合作社內的女性，利用回收的寶特瓶製作太陽能燈。受訓的婦女們除了製作自己家庭需要的燈，也成為訓練者，培訓當地青年，解決貧窮區域照明需求問題。
+☀️ 有的組織透過科技協作，解決能源不均。例如菲律賓的「以草根模式為低收入村莊提供可負擔的太陽能計畫」（Bottom Up Approach to Solar Lighting in Villages That Have Lost Income）。這個由一公升的光全球基金會（Liter of Light Global Foundation）發起的行動，透過「家庭即工廠」的概念，組織合作社內的女性，利用回收的寶特瓶製作太陽能燈。受訓的婦女們除了製作自己家庭需要的燈，也成為訓練者，培訓當地青年，解決貧窮區域照明需求問題。
 
-一般人很難想像，全世界有 25% 的人無法享有穩定的電力。有些地區的窮困家戶，甚至要花月收入的三分之一來購買煤油取得照明。
+🕯️ 一般人很難想像，全世界有 25% 的人無法享有穩定的電力。有些地區的窮困家戶，甚至要花月收入的三分之一來購買煤油取得照明。
 
-一公升的光基金會這項計畫，結合了循環再生與永續能源，讓需要幫助的人不僅「照亮自己」，也能「為他人點燈」。目前據點已橫跨菲律賓境內 32 個縣，頗具成效。
+💡 一公升的光基金會這項計畫，結合了循環再生與永續能源，讓需要幫助的人不僅「照亮自己」，也能「為他人點燈」。目前據點已橫跨菲律賓境內 32 個縣，頗具成效。
 
-有的組織則是透過數位金融系統，為離鄉背井打拼的人們減輕後顧之憂。
+🏦 有的組織則是透過數位金融系統，為離鄉背井打拼的人們減輕後顧之憂。
 
-新加坡 BeamAndGo 團隊，開發出創新支付與電子商務平台設立的支付平台，讓菲律賓海外工作者可以直接在遠端支付家用帳單，或將薪資轉成禮物卡，直接綁定當地藥局或超市消費。如此一來，海外工作者便能確保金錢被妥善運用。
+📲 新加坡 BeamAndGo 團隊，開發出創新支付與電子商務平台設立的支付平台，讓菲律賓海外工作者可以直接在遠端支付家用帳單，或將薪資轉成禮物卡，直接綁定當地藥局或超市消費。如此一來，海外工作者便能確保金錢被妥善運用。
 
-目前 BeamAndGo 團隊與菲律賓政府以及超過 7100 間店家合作，也連結多家銀行、匯款中心。此外，他們還提供移工微型貸款、改善過去必須付高利息才能借到錢的的風險。這個案例翻轉了傳統移工匯款回鄉的金融模式，是科技解決社會問題的典範。
+🔢 目前 BeamAndGo 團隊與菲律賓政府以及超過 7100 間店家合作，也連結多家銀行、匯款中心。此外，他們還提供移工微型貸款、改善過去必須付高利息才能借到錢的的風險。這個案例翻轉了傳統移工匯款回鄉的金融模式，是科技解決社會問題的典範。
 
-今年疫情嚴峻，這次亞太社會創新合作獎評審團將特別獎頒發給香港的社企抗逆基金（Community Resilience Fund）。這筆由香港社會創投基金和永續金融倡議計畫成立的緊急基金，不只為社會企業提供零利率應急貸款，當社企還款後，這筆錢會再回到到基金，持續協助其他社企。 
+🔄 今年疫情嚴峻，這次亞太社會創新合作獎評審團將特別獎頒發給香港的社企抗逆基金（Community Resilience Fund）。這筆由香港社會創投基金和永續金融倡議計畫成立的緊急基金，不只為社會企業提供零利率應急貸款，當社企還款後，這筆錢會再回到到基金，持續協助其他社企。
 
-這些案例讓我看到，社會創新不一定需要全新的發明或特別的工具，只要把握社會價值，善用既有的基礎和技術，邀集各方夥伴一起協作，就有機會解決社會問題，幫助更多人。這些讓社會共好的事，期待更多人一起加入。
+🏆 這些案例讓我看到，社會創新不一定需要全新的發明或特別的工具，只要把握社會價值，善用既有的基礎和技術，邀集各方夥伴一起協作，就有機會解決社會問題，幫助更多人。這些讓社會共好的事，期待更多人一起加入。
